--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -35,9 +34,8 @@ jobs:
         path: ./target/app.jar
 
   deploy:
-
     runs-on: ubuntu-latest
-    needs: build  # build 작업이 완료된 후에 실행됨
+    needs: build
     steps:
     - name: Download artifact
       uses: actions/download-artifact@v4
@@ -53,7 +51,7 @@ jobs:
         source: ./app.jar
         target: /home/ubuntu/app
 
-    - name: Connecting EC2 through SSH
+    - name: Connecting EC2 through SSH and installing JDK
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.EC2_HOST }}
@@ -61,8 +59,14 @@ jobs:
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script_stop: true
         script: |
+          # Install JDK 17 if not already installed
+          if ! java -version 2>&1 | grep -q "17"; then
+            sudo apt update
+            sudo apt install -y openjdk-17-jdk
+          fi
+          # Prepare the app directory
           rm -rf /home/ubuntu/app/deploy
-          mkdir /home/ubuntu/app/deploy
+          mkdir -p /home/ubuntu/app/deploy
           mv /home/ubuntu/app/app.jar /home/ubuntu/app/deploy/app.jar
           cd /home/ubuntu/app/deploy
           sudo fuser -k -n tcp 8080 || true
