--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       run: mv ./target/*.jar ./target/app.jar
 
     - name: Check jar file
-      run: ls ./target
+      run: ls ./target  # This step checks the target folder to confirm the file exists.
 
     - name: Upload jar as artifact
       uses: actions/upload-artifact@v4
@@ -41,6 +41,9 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: app.jar
+
+    - name: Check downloaded artifact
+      run: ls -l  # This step confirms if the artifact is correctly downloaded to the runner.
 
     - name: From GitHub Actions to EC2 through SCP
       uses: appleboy/scp-action@v0.1.7
