--- a/.github/workflows/deploydocker.yml
+++ b/.github/workflows/deploydocker.yml
@@ -33,7 +33,7 @@ jobs:
             newgrp docker
           fi
 
-          sudo docker pull ${{ vars.DOCKERHUB_USERNAME }}/app-with-actions:latest
+          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions:latest
           sudo docker stop app-container || true
           sudo docker rm app-container || true
-          sudo docker run -d --name app-container -p 8080:8080 ${{ vars.DOCKERHUB_USERNAME }}/app-with-actions:latest
+          sudo docker run -d --name app-container -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions:latest
