--- a/.github/workflows/deploydocker.yml
+++ b/.github/workflows/deploydocker.yml
@@ -32,7 +32,7 @@ jobs:
             sudo usermod -aG docker $USER
             newgrp docker
           fi
-
+          sudo fuser -k -n tcp 8080 || true
           sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions:latest
           sudo docker stop app-container || true
           sudo docker rm app-container || true
